--- a/Java Framework/Spring Source Code/Container/2、默认标签解析.md
+++ b/Java Framework/Spring Source Code/Container/2、默认标签解析.md
@@ -75,8 +75,8 @@
 <center>图2-1 processBeanDefinition执行序列图</center>
 
 ### 2.1.1 解析BeanDefinition
-&emsp;&emsp;下面我们就针对各个操作具体分析。首先我们从元素解析及信息提取开始，也就是 delegate.parseBeanDefinitionElement(ele), 进入 BeanDefinitionDelegate 类的parseBeanDefinitionElement方法。
->BeanDefinitionDelegate
+&emsp;&emsp;下面我们就针对各个操作具体分析。首先我们从元素解析及信息提取开始，也就是 delegate.parseBeanDefinitionElement(ele), 进入 BeanDefinitionParserDelegate 类的parseBeanDefinitionElement方法。
+>BeanDefinitionParserDelegate
  ```java
 	/**
 	 * Parses the supplied {@code <bean>} element. May return {@code null}
@@ -574,7 +574,7 @@
 	 }
  }
  ```
-3. 使替换后的类婶那生效。
+3. 使替换后的类生效。
  ```xml
  <?xml version="1.0" encoding="UTF-8"?>
 <beans xmlns="http://www.springframework.org/schema/beans"
@@ -656,7 +656,7 @@
 		}
 	}
  ```
-&emsp;&emsp;这个结构视乎我们可以想象得到，遍历所有的子元素，也就是提取所有的 constructor-arg，然后进行解析，但是具体的解析确保放在另一个函数 parseConstructorArgElement 中，具体代码如下：
+&emsp;&emsp;这个结构视乎我们可以想象得到，遍历所有的子元素，也就是提取所有的 constructor-arg，然后进行解析，但是具体的解析却放在另一个函数 parseConstructorArgElement 中，具体代码如下：
  ```java
  public void parseConstructorArgElement(Element ele, BeanDefinition bd) {
 	 	//获取 index 属性
@@ -732,7 +732,7 @@
 		* 指定了 index 属性， 添加到 indexedArgumentValues 属性中。
 		* 未指定 index 属性， 添加到 genericArgumentValues 属性中。
 
-&emsp;&emsp;那么了解了整个流程后，我们舱室进一步了解解析构造函数配置中子元素的过程，进入 parsePropertyValue ：
+&emsp;&emsp;那么了解了整个流程后，我们尝试进一步了解解析构造函数配置中子元素的过程，进入 parsePropertyValue ：
  ```java
  	/**
 	 * Get the value of a property element. May be a list etc.
@@ -814,7 +814,7 @@
  ```
 4. value 属性的处理。使用 TypedStringValue 封装，如：
 ```xml
- <constructor-args ref="a"/>
+ <constructor-args value="a"/>
  ```
 5. 子元素的处理，如：
 ```xml
@@ -1031,7 +1031,7 @@
 	private int autowireMode = AUTOWIRE_NO;
 
 	/**
-	 * 以来检查， Spring 3.0 后弃用这个属性
+	 * 依赖检查， Spring 3.0 后弃用这个属性
 	 */
 	private int dependencyCheck = DEPENDENCY_CHECK_NONE;
 
